<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/roxo"
    tools:context=".quiz.Quiz3Activity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="381dp"
        android:layout_height="696dp"
        android:background="@drawable/border_imageview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="27dp"
        android:fontFamily="@font/poppins_b"
        android:text="@string/quiz_de_perfil"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.061" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/border_radiogroup"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sim" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/parcialmente" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/nao" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginTop="248dp"
        android:background="@drawable/border_radiogroup"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sim" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/parcialmente" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/nao" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginTop="368dp"
        android:background="@drawable/border_radiogroup"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sim" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/parcialmente" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/nao" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginTop="488dp"
        android:background="@drawable/border_radiogroup"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sim" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/parcialmente" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/roxo"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/nao" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cinza"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/anterior"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4"
        app:layout_constraintVertical_bias="0.409" />

    <Button
        android:id="@+id/btnProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/proximo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnAnterior"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_textview"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/questao9"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_textview"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/questao10"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_textview"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/questao11"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup3"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_textview"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/questao12"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup4"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>